--- a/examples/configurations/templating/templates/denyrules.yaml
+++ b/examples/configurations/templating/templates/denyrules.yaml
@@ -6,5 +6,5 @@ spec:
   request:
     builtIn:
       settings:
-        level: standard
-        threatHandlingMode: block
+        level: Standard
+        threatHandlingMode: Block
