--- a/deploy/crd-rbac/ClusterRole_airlock-microgateway-operator-envoyhttpfilter-viewer.yaml
+++ b/deploy/crd-rbac/ClusterRole_airlock-microgateway-operator-envoyhttpfilter-viewer.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app.kubernetes.io/component: controller
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.0.0-beta1
+    app.kubernetes.io/version: 4.0.0
   name: airlock-microgateway-operator-envoyhttpfilter-viewer
 rules:
   - apiGroups:
