--- a/deploy/crds/CustomResourceDefinition_envoycluster.yaml
+++ b/deploy/crds/CustomResourceDefinition_envoycluster.yaml
@@ -2,12 +2,11 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.11.3
-  creationTimestamp: null
+    controller-gen.kubebuilder.io/version: v0.12.0
   labels:
     app.kubernetes.io/component: controller
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.0.0-beta1
+    app.kubernetes.io/version: 4.0.0
   name: envoyclusters.microgateway.airlock.com
 spec:
   group: microgateway.airlock.com
