--- a/deploy/deployment/Deployment_airlock-microgateway-operator-controller-manager.yaml
+++ b/deploy/deployment/Deployment_airlock-microgateway-operator-controller-manager.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app.kubernetes.io/component: controller
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.0.0-beta1
+    app.kubernetes.io/version: 4.0.0
     control-plane: airlock-microgateway-operator
   name: airlock-microgateway-operator-controller-manager
 spec:
@@ -13,7 +13,7 @@ spec:
     matchLabels:
       app.kubernetes.io/component: controller
       app.kubernetes.io/name: airlock-microgateway-operator
-      app.kubernetes.io/version: 4.0.0-beta1
+      app.kubernetes.io/version: 4.0.0
       control-plane: airlock-microgateway-operator
   template:
     metadata:
@@ -22,7 +22,7 @@ spec:
       labels:
         app.kubernetes.io/component: controller
         app.kubernetes.io/name: airlock-microgateway-operator
-        app.kubernetes.io/version: 4.0.0-beta1
+        app.kubernetes.io/version: 4.0.0
         control-plane: airlock-microgateway-operator
     spec:
       containers:
@@ -31,7 +31,7 @@ spec:
             - --upstream=http://127.0.0.1:8080/
             - --logtostderr=true
             - --v=10
-          image: gcr.io/kubebuilder/kube-rbac-proxy:v0.8.0
+          image: gcr.io/kubebuilder/kube-rbac-proxy:v0.14.1@sha256:d8609546ade59715fe90f4c4d335e4ff0813808c28a2fa024b8791f203886fee
           name: kube-rbac-proxy
           ports:
             - containerPort: 8443
@@ -45,22 +45,22 @@ spec:
             privileged: false
             readOnlyRootFilesystem: true
             runAsNonRoot: true
+            seccompProfile:
+              type: RuntimeDefault
         - args:
             - --config=operator_config.yaml
-          command:
-            - /manager
           env:
             - name: NETWORK_MANAGER_IMAGE
-              value: docker.io/ergon/airlock-microgateway-network-manager:4.0.0-beta1@sha256:05cd4474ab5fef6d9106efc665f5c0476e7486496b39bc10daec9476c2087ff6
+              value: docker.io/ergon/airlock-microgateway-network-manager:4.0.0@sha256:806b63173c2ddb02b63653f53e117a5e7fbb2f3970b71b3ed9e3278d46c08526
             - name: ENGINE_IMAGE
-              value: docker.io/ergon/airlock-microgateway-engine:4.0.0-beta1@sha256:d280af64fcb047c8d932fdbb211b46cc46b0b7f2cd88a289fe63f86dd53174d3
+              value: docker.io/ergon/airlock-microgateway-engine:4.0.0@sha256:bc9d5ce31654eb33547eeafbd3ab6af35ad99a517282e33215ca0f1a57c994e2
             - name: OPERATOR_NAMESPACE
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
             - name: WATCH_NAMESPACE
               value: ""
-          image: docker.io/ergon/airlock-microgateway-operator:4.0.0-beta1@sha256:970bee29eebac12c9bf0b65bf768c7a81fa1521e17911b56872eb64020935403
+          image: docker.io/ergon/airlock-microgateway-operator:4.0.0@sha256:ad3d19f35cee1b0dfc3846c287eae1acccee06fe41b334aa520cfd336f26ae53
           imagePullPolicy: IfNotPresent
           livenessProbe:
             httpGet:
@@ -87,10 +87,10 @@ spec:
           resources:
             limits:
               cpu: 500m
-              memory: 128Mi
+              memory: 1Gi
             requests:
               cpu: 10m
-              memory: 64Mi
+              memory: 128Mi
           securityContext:
             allowPrivilegeEscalation: false
             capabilities:
@@ -99,6 +99,8 @@ spec:
             privileged: false
             readOnlyRootFilesystem: true
             runAsNonRoot: true
+            seccompProfile:
+              type: RuntimeDefault
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: FallbackToLogsOnError
           volumeMounts:
