--- a/deploy/deployment/Namespace_airlock-microgateway-system.yaml
+++ b/deploy/deployment/Namespace_airlock-microgateway-system.yaml
@@ -4,6 +4,6 @@ metadata:
   labels:
     app.kubernetes.io/component: controller
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.0.0-beta1
+    app.kubernetes.io/version: 4.0.0
     control-plane: airlock-microgateway-operator
   name: airlock-microgateway-system
