--- a/deploy/deployment/Service_airlock-microgateway-operator-webhook.yaml
+++ b/deploy/deployment/Service_airlock-microgateway-operator-webhook.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app.kubernetes.io/component: controller
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.0.0-beta1
+    app.kubernetes.io/version: 4.0.0
   name: airlock-microgateway-operator-webhook
 spec:
   ports:
@@ -16,5 +16,5 @@ spec:
   selector:
     app.kubernetes.io/component: controller
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.0.0-beta1
+    app.kubernetes.io/version: 4.0.0
     control-plane: airlock-microgateway-operator
