--- a/deploy/deployment/ValidatingWebhookConfiguration_airlock-microgateway-operator-webhook-ns.yaml
+++ b/deploy/deployment/ValidatingWebhookConfiguration_airlock-microgateway-operator-webhook-ns.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app.kubernetes.io/component: controller
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.0.0-beta1
+    app.kubernetes.io/version: 4.0.0
   name: airlock-microgateway-operator-webhook-ns
 webhooks:
   - admissionReviewVersions:
