--- a/deploy/deployment/kustomization.yaml
+++ b/deploy/deployment/kustomization.yaml
@@ -7,7 +7,11 @@ resources:
   - ClusterRoleBinding_airlock-microgateway-operator-proxy-ns.yaml
   - ClusterRole_airlock-microgateway-operator-manager-ns.yaml
   - ClusterRole_airlock-microgateway-operator-proxy-ns.yaml
+  - ConfigMap_airlock-microgateway-license-guard-ratelimit-config.yaml
+  - ConfigMap_airlock-microgateway-license-guard-redis-config.yaml
   - ConfigMap_airlock-microgateway-operator-operator-config.yaml
+  - Deployment_airlock-microgateway-license-guard-redis.yaml
+  - Deployment_airlock-microgateway-license-guard.yaml
   - Deployment_airlock-microgateway-operator-controller-manager.yaml
   - Issuer_airlock-microgateway-operator-selfsigned-issuer.yaml
   - MutatingWebhookConfiguration_airlock-microgateway-operator-webhook-ns.yaml
@@ -15,6 +19,8 @@ resources:
   - RoleBinding_airlock-microgateway-operator-leader-election.yaml
   - Role_airlock-microgateway-operator-leader-election.yaml
   - ServiceAccount_airlock-microgateway-operator-controller-manager.yaml
+  - Service_airlock-microgateway-license-guard-redis.yaml
+  - Service_airlock-microgateway-license-guard.yaml
   - Service_airlock-microgateway-operator-metrics.yaml
   - Service_airlock-microgateway-operator-webhook.yaml
   - Service_airlock-microgateway-operator-xds.yaml
