--- a/examples/configurations/policy/denied/denyrules-1.yaml
+++ b/examples/configurations/policy/denied/denyrules-1.yaml
@@ -7,5 +7,5 @@ spec:
   request:
     builtIn:
       settings:
-        level: strict
-        threatHandlingMode: logOnly
+        level: Strict
+        threatHandlingMode: LogOnly
