--- a/examples/configurations/policy/denied/denyrules-2.yaml
+++ b/examples/configurations/policy/denied/denyrules-2.yaml
@@ -7,5 +7,5 @@ spec:
   request:
     builtIn:
       settings:
-        level: basic
-        threatHandlingMode: block
+        level: Basic
+        threatHandlingMode: Block
