--- a/deploy/deployment/Deployment_airlock-microgateway-license-guard-redis.yaml
+++ b/deploy/deployment/Deployment_airlock-microgateway-license-guard-redis.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app.kubernetes.io/component: cache
     app.kubernetes.io/name: airlock-microgateway-license-guard
-    app.kubernetes.io/version: 4.0.0
+    app.kubernetes.io/version: 4.0.1
   name: airlock-microgateway-license-guard-redis
 spec:
   replicas: 1
@@ -12,19 +12,19 @@ spec:
     matchLabels:
       app.kubernetes.io/component: cache
       app.kubernetes.io/name: airlock-microgateway-license-guard
-      app.kubernetes.io/version: 4.0.0
+      app.kubernetes.io/version: 4.0.1
   template:
     metadata:
       labels:
         app.kubernetes.io/component: cache
         app.kubernetes.io/name: airlock-microgateway-license-guard
-        app.kubernetes.io/version: 4.0.0
+        app.kubernetes.io/version: 4.0.1
     spec:
       containers:
         - command:
             - redis-server
             - /redis-config-dir/redis.conf
-          image: cgr.dev/chainguard/redis:7.0.11-r0@sha256:8b52cc017f3b0ec7d71f59b7efccddbd8b833a7b6be61285b8b3d2e95b4811d6
+          image: cgr.dev/chainguard/redis@sha256:331e052357ee4069a879cc8df9fb4e950dc6054c9b192ffd2ce81ca26046351b
           livenessProbe:
             exec:
               command:
