--- a/deploy/deployment/ConfigMap_airlock-microgateway-operator-operator-config.yaml
+++ b/deploy/deployment/ConfigMap_airlock-microgateway-operator-operator-config.yaml
@@ -265,6 +265,9 @@ data:
       - name: IPTABLES
         value: "legacy"
     securityContext:
+      runAsNonRoot: false
+      runAsUser: 0
+      runAsGroup: 0
       privileged: true
       capabilities:
         drop: ["ALL"]
@@ -301,5 +304,5 @@ metadata:
   labels:
     app.kubernetes.io/component: controller
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.0.1
+    app.kubernetes.io/version: 4.0.2
   name: airlock-microgateway-operator-operator-config
